--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "urun-ekleme",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "gkandemi <gokhan@gkandemir.com>",
+  "author": "bekiristek <info@bekiristek.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
